# Atmel SAM-BA - SAM Boot Assistant

## Version 3.2.???

### Enhancements

- Implemented XMODEM support (allows programming using SAM-BA Monitor protocol
  over UART)
- Added support for SD/MMC and e.MMC for SAM9xx5, SAMA5D3 and SAMA5D4
- Board-specific configurations are now in separate QML files, one per board.
- Serial peripheral and pin used for applet traces is now configurable via the
  board configuration.
- J-Link driver now supports SAMV71 device family (E70/S70/V70/V71)
- SAMV71 device family support was completely reworked. It now uses 3.x applets
  from the software package like the other devices.

### Bugfixes

### API Changes

- SAM-BA now requires Qt 5.8 to build
- Some common QML code is shared between similar applets for different devices
- Applet configuration parameters in the device object are now split by applet
  (config.serialflash, config.sdmmc, etc.)
- Board selection is not done using a 'board' property on the device anymore.
  Instead, the boards are defined using inheritance: for example, the
  SAMA5D2Xplained QML object inherits from SAMA5D2 QML object.
- Removed AppletLoader object. Connection object can now be used directly when
  working with applets.  Example QML scripts in examples/ directory updated
  accordingly.



## Version 3.1.4

### Enhancements

- Support for SAM9xx5 (NAND Flash and SPI Flash)
- Add command-line support for 'read', 'write' and 'execute' monitor commands
- Add command-line support for 'fullerase' (SAMV7)
- NAND: retrieve and display NAND header value from applet
- Increase default timeouts, this should fix issues on NAND & SDMMC on SAMA5D4 and SAMA5D2

### Bugfixes

- Fix parsing of addresses bigger than 0x7fffffff on the command-line

### API Changes

- No changes were made to the QML API



## Version 3.1.3

### Enhancements

- Support for SAMA5D3 (NAND Flash and SPI Flash)
- Port command-line option is now optional. When not supplied, the connection
  will default to serial/usb.

### API Changes
