@@ -9,7 +9,8 @@
 - Added support for SD/MMC and e.MMC for SAM9xx5, SAMA5D3 and SAMA5D4
 - Board-specific configurations are now in separate QML files, one per board.
 - Serial peripheral and pin used for applet traces is now configurable via the
-  board configuration.
+  board configuration and as arguments to the device/board command line
+  parameter.
 - J-Link driver now supports SAMV71 device family (E70/S70/V70/V71)
 - SAMV71 device family support was completely reworked. It now uses 3.x applets
   from the software package like the other devices.
